# guisu

./: .pre-commit-config.yaml
.github/workflows/: pre-commit.yml
crates/cli/: Cargo.toml
crates/cli/src/: common.rs  error.rs  lib.rs
crates/cli/src/cmd/: add.rs  apply.rs  diff.rs  edit.rs  hooks.rs  info.rs  status.rs
crates/cli/src/ui/: editor.rs  viewer.rs
crates/config/src/: config.rs  patterns.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs
crates/crypto/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/benches/: database_operations.rs
crates/engine/src/: attr.rs  entry.rs  lib.rs  modify.rs  state.rs
crates/engine/src/adapters/: crypto.rs  template.rs
crates/engine/src/hooks/: config.rs  executor.rs  loader.rs  mod.rs  types.rs
crates/template/: Cargo.toml
crates/template/benches/: template_rendering.rs
crates/template/src/: engine.rs  lib.rs
crates/template/src/functions/: crypto.rs  data.rs  files.rs  mod.rs  strings.rs  system.rs  vault.rs
crates/vault/src/: bw.rs  bws.rs  lib.rs
