[package]
name = "guisu-core"
version.workspace = true
edition = "2024"
authors.workspace = true
license-file.workspace = true

[lib]
name = "guisu_core"

[dependencies]
anyhow = { workspace = true, optional = true }
git2.workspace = true
indexmap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[features]
anyhow = ["dep:anyhow"]
