[package]
name = "guisu-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Processing engine for guisu dotfile manager"

[lib]
name = "guisu_engine"

[dependencies]
guisu-config = { path = "../config" }
guisu-core = { path = "../core" }
guisu-crypto = { path = "../crypto" }
guisu-template = { path = "../template" }

bincode.workspace = true
bitflags.workspace = true
blake3.workspace = true
chrono.workspace = true
dirs.workspace = true
duct.workspace = true
git2.workspace = true
ignore.workspace = true
indexmap.workspace = true
os_info.workspace = true
rayon.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shell-words = "1.1"
subtle.workspace = true
tempfile = "3.10"
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir.workspace = true
which.workspace = true

[dev-dependencies]
serial_test.workspace = true
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "state_benchmarks"
harness = false

[[bench]]
name = "database_operations"
harness = false

[lints]
workspace = true
